# StatementXL_Version_2

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  DOCKER_FIX.md  Dockerfile.full  LICENSE  NIGHT_SHIFT_LOG.md  PHASES_28_29_COMPLETE.md  PHASE_28_FINAL.md  PRODUCTION_ROADMAP.txt  PROGRESS_LOG.md  PROGRESS_UPDATE.md  PROJECT_GOAL.md  PULL_REQUEST.md  PULL_REQUEST_DESCRIPTION.md  README.md  TEST_BUG_LOG.md  WORK_SUMMARY.md  alembic.ini  balance_sheet_test.json  debug_output.txt  docker-compose.yml  docker-start.bat  docker-start.ps1  fix_imports.py  income_hard_test.json  nixpacks.toml  pdf_extracted.txt  pyproject.toml  railway.toml  requirements-prod.txt  requirements.txt  test_balance_sheet_output.xlsx  test_final_v2.xlsx  test_fixed_output.xlsx  test_output.xlsx  (+6 more)
.agent/: AI_CONTEXT.md  DECISIONS.md  HANDOFF_PROMPT.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  QUICK_START_PROMPT.txt
.agent/rules/: always-execute-commands.md  auto-dev-perms.md
.github/workflows/: ci.yml
.github/workflows/workflows/: claude-review.yml
Excel Templates/balance_sheet/Basic_Style/: StatementXL_Balance_Sheet_Template_Basic_CSV.csv  StatementXL_Balance_Sheet_Template_Basic_XLSX.xlsx  basic.xlsx  ~$StatementXL_Balance_Sheet_Template_Basic_XLSX.xlsx
Excel Templates/balance_sheet/Corporate_Style/: StatementXL_Balance_Sheet_Template_Corporate.xlsx
Excel Templates/cash_flow/Corporate_Style_CF/: StatementXL_Cash_Flow_Template_Corporate.xlsx
Excel Templates/income_statement/Basic_Style_IS/: StatementXL_Inco.xlsx  StatementXL_Income_Statement_Template.csv  StatementXL_Income_Statement_Template_Basic.xlsx
Test_Financial_Statement_PDFs/: test_results.json
alembic/: README  env.py
alembic/versions/: 001_add_user_lockout_columns.py  002_add_organization_tables.py  003_add_jobs_table.py
backend/: .dockerignore  Dockerfile  __init__.py  celery_app.py  config.py  database.py  exceptions.py  main.py  validate_codebase.py
backend/api/routes/: analytics.py  api_keys.py  audit.py  auth.py  batch.py  classify.py  data_transfer.py  engine.py  export.py  integrations.py  jobs.py  library.py  mapping.py  monitoring.py  notifications.py  onboarding.py  organization.py  payments.py  search.py  template.py  template_library.py  upload.py  webhooks.py
backend/auth/: __init__.py  api_key.py  dependencies.py  quota.py  utils.py
backend/core/: security.py
backend/middleware/: __init__.py  audit.py  device_detection.py  logging.py  rate_limit.py  security.py
backend/models/: __init__.py  analytics.py  api_key.py  audit.py  document.py  extract.py  integration.py  job.py  line_item.py  mapping.py  mapping_profile.py  notification.py  onboarding.py  organization.py  subscription.py  template.py  template_library.py  types.py  user.py  webhook.py
backend/schemas/: upload.py
backend/services/: analytics_service.py  batch_processor.py  cache_service.py  comparative_builder.py  email_service.py  excel_parser.py  gaap_classifier.py  import_export_service.py  learning_service.py  mapping_engine.py  notification_service.py  numeric_parser.py  ocr_service.py  onboarding_service.py  ontology_service.py  period_normalizer.py  search_service.py  semantic_aligner.py  structure_inferencer.py  table_detector.py  template_library_service.py  template_loader.py  template_parser.py  template_populator.py  tkg_builder.py  webhook_service.py
backend/services/classifiers/: __init__.py  embedding_based.py  hybrid.py  llm_based.py  rule_based.py
backend/services/excel_builder/: __init__.py  aggregator.py  builder.py  direct_populator.py  formula_engine.py  styles.py  template_parser.py
backend/services/integrations/: __init__.py  base.py  quickbooks.py  xero.py
backend/services/validators/: __init__.py  accounting_equation.py  formula_validator.py  trend_validator.py
backend/statementxl_engine/: ENGINE_PROGRESS.md  __init__.py  audit_sheet.py  extraction.py  mapping.py  models.py  normalization.py  orchestrator.py  validation.py  writeback.py
backend/statementxl_engine/tests/: __init__.py  test_engine.py
backend/tasks/: __init__.py  pdf_tasks.py
backend/utils/: __init__.py  performance.py
backend/validation/: __init__.py  validators.py
data/: balance_sheet_mappings.yaml  cash_flow_mappings.yaml  gaap_ontology.yaml  income_statement_mappings.yaml  ontology.yaml
docs/: ACCESSIBILITY.md  ACCESSIBILITY_REPORT.md  ADMINISTRATOR_GUIDE.md  API_REFERENCE.md  BROWSER_COMPATIBILITY.md  BROWSER_SUPPORT.md  CONTRIBUTING.md  DEBUG_REPORT.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DOCKER_TROUBLESHOOTING.md  FRONTEND_PAGES_SUMMARY.md  INSTALL.md  LAUNCH_CHECKLIST.md  PHASE_28_COMPLETE.md  QA_CHECKLIST.md  QA_REPORT.md  RELEASE_NOTES_v1.0.0.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  SECURITY_ENHANCEMENTS.md  TESTING_GUIDE.md  TODO_COMPLETION_SUMMARY.md  USER_GUIDE.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FileUpload.tsx  Layout.tsx  PDFOverlay.tsx  Sidebar.tsx
frontend/src/pages/: AdminDashboard.tsx  Analytics.tsx  AuditTrail.tsx  BatchUpload.tsx  Export.tsx  ExtractionReview.tsx  GoogleCallback.tsx  Login.tsx  MappingReview.tsx  Notifications.tsx  Onboarding.tsx  Organization.tsx  Register.tsx  Search.tsx  TemplateLibrary.tsx  TemplateUpload.tsx  (+1 more)
scripts/: backup.sh  debug_extraction.py  docker-reset.sh  fix-ports-windows.sh  restore.sh  security-audit.sh  verify-deployment.sh
tests/: conftest.py  test_classifiers.py  test_gaap_classifier.py  test_integration_e2e.py  test_numeric_parser.py  test_ocr_service.py  test_ontology_service.py  test_reasoning.py  test_table_detector.py  test_upload.py
tests/fixtures/: .gitkeep  test_dataset.csv
tests/integration/: test_auth_api.py  test_health.py
tests/performance/: locustfile.py
tests/unit/: test_auth.py  test_exceptions.py  test_user_model.py  test_validators.py
uploads/: .gitkeep
(+1 files in other folders)
